fixed menu spacing, open last source upon file load

--- a/style.css
+++ b/style.css
@@ -18,13 +18,10 @@ body {
 }
 
 .full-height {
-  height: calc(100vh - 80px) !important;
+  height: calc(100vh - 80px - 30px) !important;
   overflow: auto;
-}
-
-.v-pad {
   padding-top: 10px;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
 }
 
 .h-pad {
@@ -66,7 +63,8 @@ main {
 
 h2 {
   font-size: 1.1em;
-  margin-bottom: 25px;
+  margin: 30px 0 20px 0;
+  font-weight: normal;
 }
 
 /* MENU */
@@ -82,6 +80,7 @@ h2 {
 
 ul {
   padding: 0;
+  margin: 0;
 }
 
 li {
@@ -89,7 +88,7 @@ li {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  padding: 1px 0px;
+  padding: 1px 20px 0px 20px;
 }
 
 
